BACKEND_BASE_URL

--- a/frontend-nextjs/.env.local.example
+++ b/frontend-nextjs/.env.local.example
@@ -1,2 +1,2 @@
-# Backend PHP API Base URL
-NEXT_PUBLIC_BACKEND_BASE_URL=http://localhost:8080/api
+# Backend PHP API Base URL (server-side only, not exposed to client)
+BACKEND_BASE_URL=http://localhost:8080/api
